Driver variable, rotational difference, red. #37667

Closed
opened 2013-11-30 22:02:00 +01:00 by koil · 8 comments

System Information
OS: win 7 home premium 32 bit
Graphic card: AMD Radeon HD 7310M

Blender Version
Broken: Blender 2.69.0
Worked: unknown

Short description of error

I have a blender file setup, its a tube with 2 bones, bend the bone and the shapekey deforms the mesh.

In the graph editor, im using the driver variable Rotational Difference.
Its the difference between the 2 bones 'a' and 'b'.
It works, but the driver variable property 'Armature' on 'Bone 2', the property is red, i dont know why.

Attached: tube_RD.blend

Exact steps for others to reproduce the error
Open tube_RD.blend.
Graph Editor: Drivers: Properties: Drivers: Rotational Difference variable.

**System Information** OS: win 7 home premium 32 bit Graphic card: AMD Radeon HD 7310M **Blender Version** Broken: Blender 2.69.0 Worked: unknown **Short description of error** I have a blender file setup, its a tube with 2 bones, bend the bone and the shapekey deforms the mesh. In the graph editor, im using the driver variable Rotational Difference. Its the difference between the 2 bones 'a' and 'b'. It works, but the driver variable property 'Armature' on 'Bone 2', the property is red, i dont know why. Attached: [tube_RD.blend](https://archive.blender.org/developer/F34777/tube_RD.blend) **Exact steps for others to reproduce the error** Open tube_RD.blend. Graph Editor: Drivers: Properties: Drivers: Rotational Difference variable.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @koilz

Added subscriber: @koilz

This issue was referenced by blender/blender-addons-contrib@6b54752c2e

This issue was referenced by blender/blender-addons-contrib@6b54752c2e1bb0fff2a1abbd5a04612355d5de49

This issue was referenced by 6b54752c2e

This issue was referenced by 6b54752c2e1bb0fff2a1abbd5a04612355d5de49

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6b54752c2e.

Closed by commit 6b54752c2e.

Fixed, thanks for the report.

Fixed, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37667
No description provided.