Fix T37667: rotational difference driver target marked invalid even though valid.